Insert AutoMapper and Edit about PictureUrl

--- a/Talbat/appsettings.json
+++ b/Talbat/appsettings.json
@@ -8,5 +8,6 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server = .;Database = Talabat.APIs.G03;Trusted_Connection=True"
-  }
+  },
+  "BaseUrl": "https://localhost:7002" 
 }
